tests/files/lexer_tests/should_fail/013.cmdr
/* alias bad syntax
    expected: alias <command_varible> = <command> */
alias 3;